Add id for quantity input

--- a/public/order.html
+++ b/public/order.html
@@ -157,7 +157,7 @@
         <p>Approx. How Many People Should Cake Feed?</p>
         <div>
           <label for="quantity">
-            <select name="quantity">
+            <select name="quantity" id="quantity">
               <option value="1-10">1 - 10</option>
               <option value="10-20">10 - 20</option>
               <option value="10-20">20 - 30</option>
@@ -174,7 +174,7 @@
         </div>
         <h3>Desired Pickup Date</h3>
         <label for="date">
-          <input id="date" required type="date">
+          <input type="date" required id="date">
         </label>
         <p>(*note this is desired only and is not a confirmation, we will email you with details or
           contact you if more information is required regarding your cake.)</p>
