--- a/public/order.html
+++ b/public/order.html
@@ -156,25 +156,24 @@
         </div>
         <p>Approx. How Many People Should Cake Feed?</p>
         <div>
-          <label for="quantity">
-            <select name="quantity" id="quantity">
-              <option value="1-10">1 - 10</option>
-              <option value="10-20">10 - 20</option>
-              <option value="10-20">20 - 30</option>
-              <option value="10-20">30 - 40</option>
-              <option value="40-50">40 - 50</option>
-              <option value="50+">50+</option>
-            </select>
-          </label>
+          <label for="quantity"></label>
+          <select name="quantity" id="quantity">
+            <option value="1-10">1 - 10</option>
+            <option value="10-20">10 - 20</option>
+            <option value="10-20">20 - 30</option>
+            <option value="10-20">30 - 40</option>
+            <option value="40-50">40 - 50</option>
+            <option value="50+">50+</option>
+          </select>
         </div>
         <div>
-          <label for="details">
+          <label for="textarea">
             <textarea name="details" id="textarea" cols="30" rows="10" placeholder="Please provide details if you selected &ldquo;other&rdquo; anywhere on the form"></textarea>
           </label>
         </div>
         <h3>Desired Pickup Date</h3>
-        <label for="date">
-          <input type="date" required id="date">
+        <label for="delivery-date">
+          <input type="date" required id="delivery-date">
         </label>
         <p>(*note this is desired only and is not a confirmation, we will email you with details or
           contact you if more information is required regarding your cake.)</p>
