Make addt'l adjustments to labels

--- a/public/order.html
+++ b/public/order.html
@@ -99,29 +99,28 @@
             <input type="checkbox" checked value="chocolate" id="chocolate">Chocolate
           </label>
           <label for="vanilla">
-            <input type="checkbox" checked value="vanilla" id="vanilla">Vanilla
+            <input type="checkbox" value="vanilla" id="vanilla">Vanilla
           </label>
           <label for="fruit">
-            <input type="checkbox" checked value="fruit" id="fruit">Fruit
+            <input type="checkbox" value="fruit" id="fruit">Fruit
           </label>
           <label for="other-flavor">
-            <input type="checkbox" checked value="other flavor" id="other-flavor">Other
+            <input type="checkbox" value="other flavor" id="other-flavor">Other
           </label>
         </div>
-
         <p>Filling(s)</p>
         <div>
           <label for="vanilla-filling">
             <input type="checkbox" checked value="vanilla" id="vanilla-filling">Vanilla
           </label>
           <label for="chocolate-filling">
-            <input type="checkbox" checked value="vanilla" id="chocolate-filling">Chocolate
+            <input type="checkbox" value="vanilla" id="chocolate-filling">Chocolate
           </label>
           <label for="fruit-filling">
-            <input type="checkbox" checked value="vanilla" id="fruit-filling">Fruit
+            <input type="checkbox" value="vanilla" id="fruit-filling">Fruit
           </label>
           <label for="other-filling">
-            <input type="checkbox" checked value="vanilla" id="other-filling">Other
+            <input type="checkbox" value="vanilla" id="other-filling">Other
           </label>
         </div>
         <p>Frosting(s)</p>
@@ -130,33 +129,32 @@
             <input type="checkbox" checked value="vanilla" id="fruit-frosting">Fruit
           </label>
           <label for="chocolate-frosting">
-            <input type="checkbox" checked value="vanilla" id="chocolate-frosting">Chocolate
+            <input type="checkbox" value="vanilla" id="chocolate-frosting">Chocolate
           </label>
           <label for="vanilla-frosting">
-            <input type="checkbox" checked value="vanilla" id="vanilla-frosting">Vanilla
+            <input type="checkbox" value="vanilla" id="vanilla-frosting">Vanilla
           </label>
           <label for="other-frosting">
-            <input type="checkbox" checked value="vanilla" id="other-frosting">Other
+            <input type="checkbox" value="vanilla" id="other-frosting">Other
           </label>
         </div>
         <p>Topping(s)</p>
         <div>
-          <label for="chocolate-shavings">
+          <label for="chocolate-shavings-topping">
             <input type="checkbox" checked value="vanilla" id="chocolate-shavings-topping">Chocolate Shavings
           </label>
           <label for="sprinkles-topping">
-            <input type="checkbox" checked value="vanilla" id="sprinkles-topping">Sprinkles
+            <input type="checkbox" value="vanilla" id="sprinkles-topping">Sprinkles
           </label>
           <label for="fruit-topping">
-            <input type="checkbox" checked value="vanilla" id="fruit-topping">Fruit
+            <input type="checkbox" value="vanilla" id="fruit-topping">Fruit
           </label>
           <label for="other-topping">
-            <input type="checkbox" checked value="vanilla" id="other-topping">Other
+            <input type="checkbox" value="vanilla" id="other-topping">Other
           </label>
         </div>
-        <p>Approx. How Many People Should Cake Feed?</p>
+        <label for="quantity">Approx. How Many People Should Cake Feed?</label>
         <div>
-          <label for="quantity"></label>
           <select name="quantity" id="quantity">
             <option value="1-10">1 - 10</option>
             <option value="10-20">10 - 20</option>
@@ -167,14 +165,12 @@
           </select>
         </div>
         <div>
-          <label for="textarea">
+          <label for="textarea">Additional Details
             <textarea name="details" id="textarea" cols="30" rows="10" placeholder="Please provide details if you selected &ldquo;other&rdquo; anywhere on the form"></textarea>
           </label>
         </div>
-        <h3>Desired Pickup Date</h3>
-        <label for="delivery-date">
-          <input type="date" required id="delivery-date">
-        </label>
+        <label for="delivery-date">Desired Pickup Date</label>
+        <input type="date" required id="delivery-date">
         <p>(*note this is desired only and is not a confirmation, we will email you with details or
           contact you if more information is required regarding your cake.)</p>
         <div>
