--- a/public/order.html
+++ b/public/order.html
@@ -11,7 +11,7 @@
   </head>
   <body id ="order">
     <div class="modal">
-      <i class="modal-close fas fa-times"></i>
+      <i tabindex="0" class="modal-close fas fa-times"></i>
       <div class="modal-content">
        <h3>Want to Save 10% on Your First Cake Purchase?! Enter your email here, and join the cake club!</h3>
         <div class="input">
@@ -182,10 +182,10 @@
     <footer>
       <p>Contact Us On Social Media OR By Calling 555 - 555 - 5555</p>
       <section class="social-media">
-        <a role="link" href="https://www.instagram.com"><i class="fab fa-instagram"></i></a>
-        <a role="link" href="https://www.facebook.com"><i class="fab fa-facebook-square"></i></a>
-        <a role="link" href="https://www.google.com"><i class="fas fa-envelope-open"></i></a>
-        <a role="link" href="https://www.twitter.com"><i class="fab fa-twitter"></i></a>
+        <a aria-label="instagram" role="link" href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a aria-label="facebook" role="link" href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></a>
+        <a aria-label="email" role="link" href="https://www.google.com" target="_blank"><i class="fas fa-envelope-open"></i></a>
+        <a aria-label="twitter" role="link" href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
       </section>
     </footer>
   <script type="text/javascript" src="../main.js"></script>
