--- a/public/landing.html
+++ b/public/landing.html
@@ -40,15 +40,15 @@
           <p>WE ALSO MAKE CUPCAKES!!!</p>
         </section>
       </main>
-    <footer>
-      <p>Contact Us On Social Media OR By Calling 555 - 555 - 5555</p>
-      <section class="social-media">
-        <a role="link" href="https://www.instagram.com"><i class="fab fa-instagram"></i></a>
-        <a role="link" href="https://www.facebook.com"><i class="fab fa-facebook-square"></i></a>
-        <a role="link" href="https://www.google.com"><i class="fas fa-envelope-open"></i></a>
-        <a role="link" href="https://www.twitter.com"><i class="fab fa-twitter"></i></a>
-      </section>
-    </footer>
+      <footer>
+        <p>Contact Us On Social Media OR By Calling 555 - 555 - 5555</p>
+        <section class="social-media">
+          <a aria-label="instagram" role="link" href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+          <a aria-label="facebook" role="link" href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></a>
+          <a aria-label="email" role="link" href="https://www.google.com" target="_blank"><i class="fas fa-envelope-open"></i></a>
+          <a aria-label="twitter" role="link" href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+        </section>
+      </footer>
     <script type="text/javascript" src="../main.js"></script>
     </body>
   </html>
